# fastapi-tdd-pytest

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: db-setup.sh
src/: main.py
src/api/: index.py  lifespan.py
src/database/: __init__.py  config.py  connect.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 4ef73df477b9_test.py  91fb70293a71_add_description.py  b03bce6c19b5_add_title.py  b0b1bd6fc5f4_initial.py  cbe0f6d0116f_initial.py
src/database/tests/: conftest.py  fixtures.py
src/database/tests/models/: test_new.py
src/database/tests/utils/: async_docker.py
src/tests/: conftest.py  fixtures.py
src/tests/models/: test_category.py  test_new.py
src/tests/utils/: async_docker.py  database_utils.py  docker_utils.py
