[tool.poetry]
name = "fastapi-tdd-pytest"
version = "0.1.0"
description = ""
authors = ["Derek Bruckner <dbrucknr@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
uvloop = "^0.20.0"
httptools = "^0.6.1"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
mypy = "^1.11.2"
sqlalchemy = "^2.0.34"
async-lru = "^2.0.4"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
